--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
+    <!-- App name -->
     <string name="app_name">WeeMusic</string>
-    <string name="action_settings">Settings</string>
+
+    <!-- Activity names -->
+    <string name="title_main">Top Albums</string>
+
+    <!-- Main -->
+    <string name="text_new">New</string>
+    <string name="menu_album">Album</string>
+    <string name="menu_artist">Artist</string>
+    <string name="menu_price">Price</string>
+
 </resources>
