Tweak MainActivity and Album info layouts. Modify MainActivity overflow menu icon.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="menu_artist">Artist</string>
     <string name="menu_price">Price</string>
 
+    <!-- Accessibility -->
+    <string name="content_description_album_art">Album art</string>
+
 </resources>
